fixed the header and home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,9 @@
 <section class="header-above-only">
+  <!-- Header with background image -->
+  <header class="header" style="background-image: url('/assets/images/header-bg.jpg');">
     <app-header></app-header>
     
+    <!-- Hero content -->
     <div class="top__text" appAnimation>explore the world</div>
     <div>
       <h1 appAnimation>Find Your</h1>
@@ -12,7 +15,8 @@
       <div class="romb-topr"></div>
       <h2 appAnimation>luxury spot</h2>
     </div>
-    <img class="top__img-bottom" src="/sunflowertrip/public/assets/images/header-bg-2.png" alt="Bottom Background Image">
-  </section>
-  
-  <app-product-slider></app-product-slider>
+    <img class="top__img-bottom" src="/assets/images/header-bg-2.png" alt="Bottom Background Image">
+  </header>
+</section>
+
+<app-product-slider></app-product-slider>
