--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,140 +1,132 @@
+.header-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 44px;
+}
 
-.header {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 1040px;
-    position: relative;
-  }
-  
-  .header-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 24px 44px;
-  }
-  
-  .header-logo {
-    width: 151px;
-    height: 120px;
-  }
-  
-  .header-right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-  }
-  
-  .contact-info {
-    display: flex;
-    gap: 40px;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 30px 25px 30px 100px;
-    margin-bottom: 20px;
-    color: #ffffff;
-    position: relative;
-    z-index: 1;
-  }
-  
-  .contact-info::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to bottom right, #a3c8f0 0%, #d4a9e2 100%);
-    clip-path: polygon(0 0, 10% 100%, 100% 100%, 100% 0);
-    z-index: -1;
-    opacity: 0.8;
-  }
-  
-  .contact-info a {
-    color: #000;
-    text-transform: uppercase;
-    position: relative;
-  }
-  
-  .contact-info .login {
-    border-left: 2px solid #000;
-    padding-left: 10px;
-    font-weight: bolder;
-  }
-  
-  .header__menu {
-    display: flex;
-    align-items: center;
-  }
-  
-  .menu__list {
-    display: flex;
-    gap: 20px;
-    padding-top: 18px;
-  }
-  
-  .menu__list a {
-    font-family: 'Forum', cursive;
-    font-size: 16px;
-    line-height: 18px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #000;
-    font-weight: 500;
-  }
-  
-  .menu__list li span {
-    font-size: 12px;
-    margin-left: 5px;
-  }
-  
-  .dropdown-nav {
-    position: relative;
-  }
-  
-  .dropdown-content-nav {
-    display: none;
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.9);
-    min-width: 200px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    top: 100%;
-    left: 0;
-    border-radius: 5px;
-  }
-  
-  .dropdown-content-nav a {
-    color: #000;
-    padding: 12px 16px;
-    display: block;
-    font-size: 14px;
-    text-transform: none;
-  }
-  
-  .dropdown-content-nav a:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .dropdown-nav:hover .dropdown-content-nav {
-    display: block;
-  }
-  
-  .custom-btn {
-    margin-left: 20px;
-    background-color: transparent;
-    color: #000;
-    border: 2px solid #ffffff;
-    padding: 8px 16px;
-    border-radius: 25px;
-    font-family: 'Forum', cursive;
-    font-size: 16px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .custom-btn:hover {
-    background-color: #000;
-    color: #fff;
-  }
+.header-logo {
+  width: 151px;
+  height: 120px;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.contact-info {
+  display: flex;
+  gap: 40px;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 30px 25px 30px 100px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  position: relative;
+  z-index: 1;
+}
+
+.contact-info::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom right, #a3c8f0 0%, #d4a9e2 100%);
+  clip-path: polygon(0 0, 10% 100%, 100% 100%, 100% 0);
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.contact-info a {
+  color: #000;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.contact-info .login {
+  border-left: 2px solid #000;
+  padding-left: 10px;
+  font-weight: bolder;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.menu__list {
+  display: flex;
+  gap: 20px;
+  padding-top: 18px;
+}
+
+.menu__list a {
+  font-family: 'Forum', cursive;
+  font-size: 16px;
+  line-height: 18px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 500;
+}
+
+.menu__list li span {
+  font-size: 12px;
+  margin-left: 5px;
+}
+
+.dropdown-nav {
+  position: relative;
+}
+
+.dropdown-content-nav {
+  display: none;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.9);
+  min-width: 200px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 100%;
+  left: 0;
+  border-radius: 5px;
+}
+
+.dropdown-content-nav a {
+  color: #000;
+  padding: 12px 16px;
+  display: block;
+  font-size: 14px;
+  text-transform: none;
+}
+
+.dropdown-content-nav a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown-nav:hover .dropdown-content-nav {
+  display: block;
+}
+
+.custom-btn {
+  margin-left: 20px;
+  background-color: transparent;
+  color: #000;
+  border: 2px solid #ffffff;
+  padding: 8px 16px;
+  border-radius: 25px;
+  font-family: 'Forum', cursive;
+  font-size: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.custom-btn:hover {
+  background-color: #000;
+  color: #fff;
+}
