--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,4 +19,18 @@
   </header>
 </section>
 
-<app-product-slider></app-product-slider>
+<!-- <app-product-slider></app-product-slider> -->
+<app-about></app-about>
+<app-why-us></app-why-us>
+<app-top-picks></app-top-picks>
+<app-destinations></app-destinations>
+<app-testimonials></app-testimonials>
+<app-services></app-services>
+<app-chat-widget></app-chat-widget>
+<app-contact></app-contact>
+<app-newsletter></app-newsletter>
+<app-itinerary></app-itinerary>
+<app-map></app-map>
+
+<!-- <app-back-to-top></app-back-to-top> -->
+<app-footer></app-footer>
