changes all pushed

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,15 +11,15 @@
           <i class="fas fa-map-marker-alt"></i>
           <div class="info-details">
             <h4>Address</h4>
-            <p>123 Park Street, Kolkata, West Bengal 700016, India</p>
+            <p>BD 230, Sector 1 BD Block, Kolkata, West Bengal 700064, India</p>
           </div>
         </div>
         <div class="info-item">
           <i class="fas fa-phone-alt"></i>
           <div class="info-details">
             <h4>Phone</h4>
-            <p><a href="tel:+913323456789">+91 33 2345 6789</a></p>
-            <p><a href="tel:+919876543210">+91 98765 43210</a></p>
+            <p><a href="tel:+918981663005">+91 8981663005</a></p>
+            <p><a href="tel:+9133 3547 4551">+91 33 3547 4551</a></p>
           </div>
         </div>
         <div class="info-item">
@@ -54,7 +54,7 @@
           </div>
           <div class="form-group">
             <label for="contact-email">Email Address</label>
-            <input type="email" id="contact-email" formControlName="email" class="form-control" required>
+            <input class="form-input" type="email" id="contact-email" formControlName="email" class="form-control" required>
             <span class="error" *ngIf="submitted && contactForm.get('email')?.invalid">Valid email is required</span>
           </div>
           <div class="form-group">
