--- a/src/app/components/itinerary/itinerary.component.html
+++ b/src/app/components/itinerary/itinerary.component.html
@@ -1,4 +1,4 @@
-<section class="section" id="itinerary" style="background-color: var(--light-color);">
+<section class="section" id="itinerary" style="background-color: var(--pink);">
     <div class="container">
       <div class="section-title text-center">
         <h2>Design Your Dream Trip</h2>
