--- a/src/app/components/newsletter/newsletter.component.scss
+++ b/src/app/components/newsletter/newsletter.component.scss
@@ -1,5 +1,5 @@
 .newsletter {
-    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    background: linear-gradient(135deg, var(--dark-pink), var(--light-pink));
     color: var(--white);
     padding: 60px 0;
   }
