--- a/src/app/components/why-us/why-us.component.scss
+++ b/src/app/components/why-us/why-us.component.scss
@@ -11,7 +11,7 @@
   .feature {
     text-align: center;
     padding: 30px 20px;
-    background-color: var(--light-color);
+    background-color: var(--pink);
     border-radius: 15px;
     transition: all 0.3s ease;
   
