--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,10 @@
   --light-color: #f4f4f4;
   --accent-color: #6c63ff;
   --text-color: #4a4a4a;
-  --white: #ffffff;
+  --white: #E0D1C8;
+  --pink:#dcbaddd8;
+  --light-pink:#ca97b5;
+  --dark-pink:#c347c7;
 }
 
 a {
