--- a/src/app/components/destinations/destinations.component.scss
+++ b/src/app/components/destinations/destinations.component.scss
@@ -1,5 +1,5 @@
 .destinations {
-    background: linear-gradient(rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.9)), url('https://images.pexels.com/photos/1632790/pexels-photo-1632790.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
+    background: linear-gradient(#E0D1C8, #e0d1c8e8), url('https://images.pexels.com/photos/1632790/pexels-photo-1632790.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
   }
   
   .destinations-grid {
@@ -26,7 +26,7 @@
       transform: scale(1.1);
     }
   }
-  
+
   .destination-content {
     position: absolute;
     bottom: 0;
