--- a/src/app/components/itinerary/itinerary.component.scss
+++ b/src/app/components/itinerary/itinerary.component.scss
@@ -1,6 +1,6 @@
 .form-group {
     margin-bottom: 20px;
-  
+
     label {
       display: block;
       margin-bottom: 5px;
@@ -12,6 +12,7 @@
     width: 100%;
     padding: 12px 15px;
     border: 1px solid #ddd;
+    background-color: var(--white);
     border-radius: 5px;
     font-size: 1rem;
     font-family: 'Manrope', sans-serif;
@@ -22,7 +23,7 @@
       box-shadow: 0 0 0 2px rgba(255, 126, 95, 0.2);
     }
   }
-  
+ 
   textarea.form-control {
     height: 150px;
     resize: vertical;
