--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,5 +1,5 @@
 .map {
-    background-color: var(--light-color);
+    background-color: linear-gradient(135deg, var(--pink), var(--light-pink));
     padding-bottom: 80px;
   }
   
