--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="about-content">
         <div class="about-image" data-aos="fade-right">
-          <img src="assets/images/luxury/luxury-1.jpg" alt="Sunflower Trip Kolkata Office">
+          <img src="https://images.unsplash.com/photo-1482332486572-10fff1bedfbe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fFRPVVJ8ZW58MHx8MHx8fDA%3D" alt="Sunflower Trip Kolkata Office">
         </div>
         <div class="about-text" data-aos="fade-left">
           <h2>Discover Sunflower Trip</h2>
