--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -40,7 +40,7 @@
         </div>
         <div class="social-links">
           <a href="https://facebook.com/sunflowertrip" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://instagram.com/sunflowertrip" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://instagram.com/tripsunflower" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/919876543210" target="_blank"><i class="fab fa-whatsapp"></i></a>
           <a href="https://youtube.com/sunflowertrip" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
