--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -26,7 +26,7 @@ display: flex;
 align-items: flex-start;
 margin-bottom: 20px;
 
-i {
+.fa-phone-alt,.fa-map-marker-alt,.fa-envelope,.fa-clock {
 font-size: 1.5rem;
 color: var(--primary-color);
 margin-right: 15px;
@@ -36,6 +36,7 @@ margin-top: 5px;
     background-color: var(--pink);
 }
 .info-details {
+    padding-left: 10px;
 h4 {
 font-size: 1.2rem;
 margin-bottom: 5px;
