--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -39,7 +39,7 @@
         <div class="footer-col">
           <h4>Contact Info</h4>
           <ul>
-            <li><i class="fas fa-map-marker-alt"></i> 123 Park Street, Kolkata, West Bengal 700016, India</li>
+            <li><i class="fas fa-map-marker-alt"></i> 230 BD block, sector 1, Kolkata, West Bengal 700016, India</li>
             <li><i class="fas fa-phone-alt"></i> <a href="tel:+913323456789">+91 33 2345 6789</a></li>
             <li><i class="fas fa-envelope"></i> <a href="mailto:info@sunflowertrip.com">info&#64;sunflowertrip.com</a></li>
             <li><i class="fas fa-clock"></i> Mon-Sat: 10:00 AM - 7:00 PM</li>
