--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -32,13 +32,15 @@
       li {
         margin-bottom: 10px;
         display: flex;
+        gap:10px;
         align-items: center;
   
         i {
+          
           margin-right: 10px;
           color: var(--primary-color);
         }
-  
+    
         a {
           color: var(--white);
           font-size: 0.95rem;
