--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header-box" >
-  <img class="header-logo" src="/assets/images/logo21.png" alt="Luxury Travel Logo">
+  <img class="header-logo" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/logo21.png?raw=true" alt="Luxury Travel Logo">
   <div class="header-right">
     <div class="contact-info" [ngClass]="{'scrolled': isScrolled}">
       <a href="tel:+916-7864-3466">+916-7864-3466</a>
-      <a routerLink="/faq">FAQ/Help?</a>
+      <a routerLink="/contact">FAQ/Help?</a>
       <a routerLink="/careers">Careers</a>
       <a routerLink="/about-us">About us</a>
       <a routerLink="/travel-guides">TravelGuides</a>
@@ -45,7 +45,7 @@
         </li>
       </ul>
       <div class="header__button">
-        <button class="custom-btn" (click)="customizeHoliday()">Customize My Holiday</button>
+        <button class="custom-btn" (click)="customizeHoliday()" routerLink="/itinerary">Customize My Holiday</button>
       </div>
     </nav>
   </div>
