--- a/src/app/components/itinerary/itinerary.component.html
+++ b/src/app/components/itinerary/itinerary.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="section" id="itinerary" style="background-color: var(--pink);">
     <div class="container">
       <div class="section-title text-center">
@@ -57,3 +58,4 @@
       </div>
     </div>
   </section>
+  <app-footer></app-footer>
