--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,5 +1,7 @@
-.map {
-    background-color: linear-gradient(135deg, var(--pink), var(--light-pink));
+.map{
+    // background-color: linear-gradient(135deg, #009688, #b2dfdb);
+    background: linear-gradient( #4db6ac,#b2dfdb);
+
     padding-bottom: 80px;
   }
   
