--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,4 @@
+<!-- <app-header></app-header> -->
 <section class="section contact" id="contact">
   <div class="container">
     <div class="section-title text-center">
@@ -40,7 +41,7 @@
         </div>
         <div class="social-links">
           <a href="https://facebook.com/sunflowertrip" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://instagram.com/sunflowertrip" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://instagram.com/tripsunflower" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/919876543210" target="_blank"><i class="fab fa-whatsapp"></i></a>
           <a href="https://youtube.com/sunflowertrip" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
@@ -78,3 +79,4 @@
     </div>
   </div>
 </section>
+<app-footer></app-footer>
