--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,13 @@
 <section class="header-above-only">
   <!-- Header with background image -->
-  <header class="header" style="background-image: url('/assets/images/header-bg.jpg');">
+  <header class="header" style="background-image: url('https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg.jpg?raw=true');">
     <app-header></app-header>
     
     <!-- Hero content -->
     <div class="top__text" appAnimation>explore the world</div>
     <div>
       <h1 appAnimation>Find Your</h1>
-      <img class="top__img" src="/assets/images/header-bg-1.png" alt="Background Image">
+      <img class="top__img" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-1.png?raw=true" alt="Background Image">
       <div class="romb"></div>
       <div class="romb-left"></div>
       <div class="romb-right"></div>
@@ -15,21 +15,21 @@
       <div class="romb-topr"></div>
       <h2 appAnimation>luxury spot</h2>
     </div>
-    <img class="top__img-bottom" src="/assets/images/header-bg-2.png" alt="Bottom Background Image">
+    <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image">
   </header>
 </section>
 
-<!-- <app-product-slider></app-product-slider> -->
 <app-destinations></app-destinations>
-<app-why-us></app-why-us>
-<app-about></app-about>
-<app-top-picks></app-top-picks>
+
 <app-testimonials></app-testimonials>
+<!-- <app-about></app-about> -->
 <app-services></app-services>
+<app-why-us></app-why-us>
+<app-top-picks></app-top-picks>
 <app-chat-widget></app-chat-widget>
-<app-contact></app-contact>
 <app-newsletter></app-newsletter>
-<app-itinerary></app-itinerary>
+
+<!-- <app-itinerary></app-itinerary> -->
 <app-map></app-map>
 
 <!-- <app-back-to-top></app-back-to-top> -->
