--- a/src/app/components/testimonials/testimonials.component.scss
+++ b/src/app/components/testimonials/testimonials.component.scss
@@ -1,5 +1,5 @@
 .testimonials {
-  background-color: var(--light-color);
+  background-color: #4db6ac;
   position: relative;
   overflow: hidden;
 
@@ -40,13 +40,13 @@
     top: 10px;
     right: 20px;
     font-size: 5rem;
-    color: rgba(255, 126, 95, 0.1);
+    color: white;
   }
 
   p {
     font-style: italic;
     margin-bottom: 20px;
-    color: #555;
+    color:white
   }
 }
 
@@ -70,12 +70,13 @@
 
   .client-info {
     h4 {
+      color: antiquewhite;
       margin-bottom: 5px;
       font-size: 1.2rem;
     }
 
     span {
-      color: #777;
+      color: #f0e7e7;
       font-size: 0.9rem;
     }
   }
