--- a/src/app/components/top-picks/top-picks.component.scss
+++ b/src/app/components/top-picks/top-picks.component.scss
@@ -30,12 +30,12 @@
     width: 100%;
     padding: 20px;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
-    color: var(--white);
+    color: white;
     transform: translateY(0);
     transition: transform 0.3s ease;
   
     h3 {
-      color: var(--white);
+      color: white;
       font-size: 1.6rem;
       margin-bottom: 5px;
     }
