--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,10 +16,10 @@
   --light-color: #f4f4f4;
   --accent-color: #6c63ff;
   --text-color: #4a4a4a;
-  --white: #E0D1C8;
-  --pink:#dcbaddd8;
-  --light-pink:#ca97b5;
-  --dark-pink:#c347c7;
+  --white: #4db6ac;
+  --pink:#009688;
+  --light-pink:#b2dfdb;
+  --dark-pink:#004d40;
 }
 
 a {
