made most of the components good

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
 <!-- <app-about></app-about> -->
 <app-services></app-services>
 <app-why-us></app-why-us>
-<app-top-picks></app-top-picks>
+<!-- <app-top-picks></app-top-picks> -->
 <app-chat-widget></app-chat-widget>
 <app-newsletter></app-newsletter>
 
