--- a/src/app/components/top-picks/top-picks.component.html
+++ b/src/app/components/top-picks/top-picks.component.html
@@ -1,4 +1,4 @@
-<section class="section destinations" style="background: var(--white);">
+<section class="section destinations" >
     <div class="container">
       <div class="section-title text-center">
         <h2>Top Picks from Kolkata</h2>
