--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -4,17 +4,27 @@
       <h2>Explore Top Destinations</h2>
       <p>Discover our handpicked destinations for your next adventure</p>
     </div>
-    <div class="destination-grid">
-      <div class="destination-card" *ngFor="let destination of destinations; let i = index" [attr.data-aos]="i % 2 === 0 ? 'fade-up' : 'fade-up'" [attr.data-aos-delay]="i * 100">
-        <div class="destination-image">
-          <img [src]="destination.image" [alt]="destination.name">
-        </div>
-        <div class="destination-content">
-          <h3>{{ destination.name }}</h3>
-          <p>{{ destination.description }}</p>
-          <a [href]="destination.link" class="btn btn-outline">Explore {{ destination.name.split(',')[0] }} <i class="fas fa-arrow-right"></i></a>
+    <div class="swiper destination-slider" #swiperContainer>
+      <div class="swiper-wrapper">
+        <div class="swiper-slide" *ngFor="let destination of destinations; let i = index">
+          <div class="destination-card fade-in-up" [style.--delay]="i">
+            <div class="destination-image">
+              <img [src]="destination.image" [alt]="destination.name">
+            </div>
+            <div class="destination-content">
+              <h3>{{ destination.name }}</h3>
+              <p>{{ destination.description }}</p>
+              <a [href]="'/destination/' + destination.slug" class="btn-explore">
+                Explore {{ destination.name.split(',')[0] }} 
+                <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
     </div>
   </div>
 </section>
