--- a/src/app/components/newsletter/newsletter.component.scss
+++ b/src/app/components/newsletter/newsletter.component.scss
@@ -10,10 +10,11 @@
     text-align: center;
   
     h2 {
-      color: var(--white);
+      color: white;
     }
   
     p {
+      color: #ddd;
       margin-bottom: 30px;
     }
   }
