--- a/src/app/components/top-picks/top-picks.component.scss
+++ b/src/app/components/top-picks/top-picks.component.scss
@@ -1,3 +1,18 @@
+.section{
+position: relative;
+padding: 100px 0;
+// overflow: hidden;
+background: linear-gradient(135deg, rgba(77, 182, 172, 0.85), rgba(0, 150, 136, 0.9));
+&::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: url('https://images.pexels.com/photos/258154/pexels-photo-258154.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
+  opacity: 0.15;
+  filter: blur(3px);
+  z-index: 0;
+}
+}
 .destinations-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
@@ -29,7 +44,7 @@
     left: 0;
     width: 100%;
     padding: 20px;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+    // background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
     color: white;
     transform: translateY(0);
     transition: transform 0.3s ease;
