--- a/src/app/components/why-us/why-us.component.html
+++ b/src/app/components/why-us/why-us.component.html
@@ -1,11 +1,19 @@
-<section class="section why-us" id="why-us">
+<section class="why-us-section" id="why-us">
+  <div class="overlay"></div>
   <div class="container">
-    <div class="section-title text-center">
+    <div class="section-title">
       <h2>Why Choose Sunflower Trip?</h2>
       <p>Discover what sets us apart as your Kolkata-based travel partner</p>
     </div>
+
     <div class="feature-grid">
-      <div class="feature" *ngFor="let item of whyUsItems; let i = index" [attr.data-aos]="'fade-up'" [attr.data-aos-delay]="100 + i * 100">
+      <div
+        class="feature"
+        *ngFor="let item of whyUsItems; let i = index"
+        [attr.data-aos]="'fade-up'"
+        [attr.data-aos-delay]="100 + i * 100"
+        [ngStyle]="{ transform: 'translateY(' + (i * 15) + 'px)' }"
+      >
         <i [ngClass]="item.icon"></i>
         <h3>{{ item.title }}</h3>
         <p>{{ item.description }}</p>
