--- a/src/app/components/chat-widget/chat-widget.component.scss
+++ b/src/app/components/chat-widget/chat-widget.component.scss
@@ -84,10 +84,11 @@
     a {
       display: flex;
       align-items: center;
-      color: var(--primary-color);
+      color: black;
       font-weight: 500;
-  
+      gap:10px;
       i {
+   
         margin-right: 10px;
       }
   
