--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,5 @@
 <!-- <app-header></app-header> -->
+<app-navbar></app-navbar>
 <section class="section contact" id="contact">
   <div class="container">
     <div class="section-title text-center">
