--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,4 @@
 .header-box {
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,61 +19,7 @@
   align-items: flex-end;
 }
 
-.contact-info {
-  position: fixed;
-  top: 0;
-  right: 0;
-  display: flex;
-  gap: 40px;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 20px 25px 20px 100px;
-  margin-bottom: 20px;
-  z-index: 1;
-  /* Glassmorphism styles */
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  clip-path: polygon(0 0, 10% 100%, 100% 100%, 100% 0);
-}
 
-.contact-info::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(to bottom right, rgba(163, 200, 240, 0.3) 0%, rgba(212, 169, 226, 0.3) 100%);
-  clip-path: polygon(0 0, 10% 100%, 100% 100%, 100% 0);
-  z-index: -1;
-  opacity: 0.8;
-}
-
-.contact-info a {
-  color: #ffffff;
-  text-transform: uppercase;
-  position: relative;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  transition: color 0.3s ease;
-}
-
-.contact-info a:hover {
-  color: #e0e0e0;
-}
-
-.contact-info .login {
-  border-left: 2px solid rgba(255, 255, 255, 0.5);
-  padding-left: 10px;
-  font-weight: bolder;
-}
-
-.contact-info.scrolled {
-  background: rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-}
 .header__menu {
 
   padding-top: 3em;
@@ -112,7 +57,7 @@
 .dropdown-content-nav {
   display: none;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: linear-gradient(to bottom right, rgba(72, 90, 110, 0.699) 0%, rgba(113, 68, 128, 0.815) 100%);
   min-width: 200px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -121,6 +66,14 @@
   border-radius: 5px;
 }
 
+.dropdown-content-nav::before {
+  content: '';
+  position: absolute;
+ 
+  background: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89) 0%, rgba(212, 169, 226, 0.815) 100%);
+  z-index: -1;
+  opacity: 0.8;
+}
 .dropdown-content-nav a {
   color: #000;
   padding: 12px 16px;
@@ -153,6 +106,6 @@
 }
 
 .custom-btn:hover {
-  background-color: #000;
-  color: #fff;
+  background: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89) 0%, rgba(212, 169, 226, 0.815) 100%);
+  color: wheat;
 }
