--- a/src/app/components/itinerary/itinerary.component.html
+++ b/src/app/components/itinerary/itinerary.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<section class="section" id="itinerary" style="background-color: var(--pink);">
+<section class="section itinerary" id="itinerary">
     <div class="container">
       <div class="section-title text-center">
         <h2>Design Your Dream Trip</h2>
