--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,20 @@
   --pink:#009688;
   --light-pink:#b2dfdb;
   --dark-pink:#004d40;
+
+  --peacock-blue: #1b2f40;
+  --glass-bg: rgba(30, 30, 30, 0.6);
+  --glass-border: rgba(255, 255, 255, 0.15);;
+  --button-gradient: linear-gradient(135deg, #1b2f40, #00bcd4);
+  
+   --background-gradient: linear-gradient(270deg, #00bcd4,#22574e);
+
+
+
+  --primary-color: #00bcd4; // peacock blue
+  // --button-gradient: linear-gradient(135deg, #007c91, #00bcd4);
+  --button-hover: #00acc1;
+  --gold: #ffd700;
 }
 
 a {
@@ -40,7 +54,7 @@ button {
 
 body {
   font-family: "Forum", sans-serif;
-  background: #e2d3ce;
+  background: var(--background-gradient);
   line-height: 1.6;
   color: var(--text-color);
   overflow-x: hidden;
@@ -98,14 +112,14 @@ a {
 
 .btn-primary {
   background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-  color: var(--white);
+  color: white;
   border: none;
 
   &:hover {
     background: linear-gradient(135deg, var(--secondary-color), var(--primary-color));
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    color: var(--white);
+    color: black;
   }
 }
 
