--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -40,3 +40,12 @@
       padding: 40px 15px;
     }
   }
+
+  // @mixin glassmorphism {
+  //   background: $glass-bg;
+  //   backdrop-filter: $glass-blur;
+  //   -webkit-backdrop-filter: $glass-blur;
+  //   border: 1px solid rgba(255, 255, 255, 0.2);
+  //   box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
+  // }
+  
