--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -19,7 +19,8 @@
   text-transform: uppercase;
   color: #0c0b10;
   margin-bottom: 60px;
-  padding-left: 150px;
+  padding-left: 200px;
+  margin-top: 155px;
   transform: scale3d(1, 1, 1) rotateY(500deg);
   opacity: 0;
 }
@@ -54,6 +55,7 @@ h1._active {
 }
 
 .top__img {
+  padding-top: 80px;
   position: absolute;
   width: 100%;
   height: 566px;
@@ -78,10 +80,11 @@ h2 {
   color: #fcfcfc;
   width: 100%;
   position: absolute;
-  bottom: 325px;
+  bottom: 230px;
+   padding-top: 150px;
   transform: translate(0px, 115%);
   opacity: 0;
-  z-index: 10;
+  z-index: 20;
 }
 
 h2._active {
