codes with no error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
 <app-footer></app-footer> -->
 
 <router-outlet></router-outlet>
-
+<!-- <app-booking-inquiry></app-booking-inquiry> -->
+ <!-- <app-destination-main></app-destination-main> -->
+  <!-- <app-tour-package></app-tour-package> -->
 <!-- <app-home></app-home> -->
