--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <a href="tel:+916-7864-3466">+916-7864-3466</a>
     <a routerLink="/contact">FAQ/Help?</a>
     <a routerLink="/careers">Careers</a>
-    <a routerLink="/about-us">About us</a>
-    <a routerLink="/travel-guides">TravelGuides</a>
+    <a routerLink="/aboutUs">About us</a>
+    <a routerLink="/travelGuide">TravelGuides</a>
     <a routerLink="/login" class="login">LOGIN / SIGNUP</a>
   </div>
