--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
 <section class="header-above-only">
   <!-- Header with background image -->
-  <header class="header" style="background-image: url('/assets/images/header-bg.png');">
+  <header class="header" style="background-image: url('https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/header-bg.png?raw=true');">
     <app-header></app-header>
     
     <!-- Hero content -->
     <div class="top__text" appAnimation>explore the world</div>
     <div>
       <h1 appAnimation>Find Your</h1>
-      <img class="top__img" src="\assets\images\header-bg2.png" alt="Background Image">
+      <img class="top__img" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/header-bg2.png?raw=true" alt="Background Image">
       <div class="romb"></div>
       <div class="romb-left"></div>
       <div class="romb-right"></div>
@@ -15,7 +15,7 @@
       <div class="romb-topr"></div>
       <h2 appAnimation>luxury spot</h2>
     </div>
-    <!-- <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image"> -->
+    <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image">
   </header>
 </section>
 
