--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,14 +3,14 @@
     <div class="footer-grid">
       <div class="footer-col footer-brand">
         <div class="footer-logo">
-          <img src="assets/images/logo21.png" alt="Sunflower Trip Logo">
+          <img src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/logo3.png?raw=true" alt="Sunflower Trip Logo">
           <span>Sunflower Trip</span>
         </div>
         <p>Your Kolkata-based travel partner crafting personalized journeys worldwide.</p>
         <div class="social-links">
-          <a href="https://facebook.com/sunflowertrip" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://instagram.com/sunflowertrip" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://wa.me/919876543210" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://facebook.com/sunflowertrip19" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://instagram.com/tripsunflower" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/917076421377" target="_blank"><i class="fab fa-whatsapp"></i></a>
           <a href="https://youtube.com/sunflowertrip" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
