--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -29,7 +29,7 @@ $gradient-hover: linear-gradient(to bottom right, rgba(163, 200, 240, 0.89), rgb
 .header-logo {
   width: 80px;
   height: 75px;
-  filter: brightness(0);
+  // filter: brightness(0);
 }
 
 .header-right {
