--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   color: #0c0b10;
   margin-bottom: 60px;
-  padding-left: 200px;
+  // padding-left: 200px;
   margin-top: 155px;
   transform: scale3d(1, 1, 1) rotateY(500deg);
   opacity: 0;
